<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/action_settings">
        <menu>

            <item
                android:id="@+id/nav_bigbang_settings"
                android:icon="@drawable/bigbang_settings"
                android:title="@string/bigbang_settings" />

            <item
                android:id="@+id/nav_note_settigns"
                android:icon="@drawable/note_settings"
                android:title="@string/note_settings"/>
        </menu>
    </item>

    <item android:title="@string/share_and_about">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/action_about" />
        </menu>
    </item>

</menu>
